seak/main.css
@charset "UTF-8";
/* main style */
html,
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto", sans-serif;
  font-weight: 100;
}

body {
  margin: 0;
  padding: 0;
  background: #232323;
  color: #cdcdcd;
  font-family: "Avenir Next", "Avenir", sans-serif;
}

a {
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}

a:hover {
  color: tomato;
}

#menuToggle {
  display: block;
  position: relative;
  top: 50px;
  left: 50px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0;
  /* hide this */
  z-index: 2;
  /* and place it over the hamburger */
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: #cdcdcd;
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}

/*
 * But let's hide the middle one.
 */
#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/*
 * Ohyeah and the last one should go the other direction
 */
#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

/*
 * Make this absolute positioned
 * at the top left of the screen
 */
#menu {
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
}

#menu li {
  padding: 10px 0;
  font-size: 22px;
}


/* div options */
.divOptions {
  display: inline;
  color: blue;
}


/*
 * And let's slide it in from the left
 */
#menuToggle input:checked ~ ul {
  transform: none;
}

.container {
  margin: 0 auto;
  max-width: 940px;
  padding: 0 10px;
}

.header {
  background: url(../seak/seak-images/mainpic1.jpg) no-repeat center center;
  background-size: cover;
  height: 800px;
  text-align: center;
}

.header .container {
  position: relative;
  top: 200px;
}

.header h1 {
  color: #fff;
  line-height: 100px;
  font-size: 80px;
  margin-top: 0;
  margin-bottom: 80px;
  text-transform: uppercase;
}

@media (min-width: 850px) {
  .header h1 {
    font-size: 120px;
  }
}
.header p {
  color: #fff;
  font-weight: 500;
  letter-spacing: 8px;
  margin-bottom: 40px;
  margin-top: 0;
  text-transform: uppercase;
}

.btn {
  color: #fff;
  background: #000;
  padding: 10px 40px;
  text-decoration: none;
  transition: background 0.5s;
}

.main .container {
  margin: 80px auto;
}

.main img {
  position: center;
  margin-left: 50%;
}

.jumbotron {
  background-color: #117bff;
  background-size: cover;
  height: 600px;
}

.jumbotron .container {
  position: relative;
  top: 220px;
}

.jumbotron h2 {
  color: #fff;
  text-align: right;
}

.jumbotron p {
  color: #fff;
  text-align: right;
}

.jumbotron .btn {
  margin: 10px 0 0;
  float: right;
}

.footer {
  height: 80px;
  padding-bottom: 50px;
}

.footer p {
  color: #fff;
  font-size: 14px;
  height: 80px;
  line-height: 80px;
  margin: 0;
}

@media (max-width: 500px) {
  .header h1 {
    font-size: 50px;
    line-height: 64px;
  }

  .main,
.jumbotron {
    padding: 0 30px;
  }

  .main img {
    width: 100%;
  }
}
/*PEN STYLES*/
body {
  background: #f1f1f1;
  margin-top: 2rem;
}

.contactForm {
  border-radius: 4px;
  box-sizing: border-box;
  margin: auto;
  max-width: 450px;
  overflow: hidden;
  /*SUCESS STYLES*/
}
.contactForm .formHeader {
  background: #54428E;
  border-bottom: 4px solid #54428E;
  color: #fff;
  text-align: center;
  overflow: hidden;
  /*TRANSITION*/
  transition: all 0.5s ease;
}
.contactForm .formHeader h1 {
  line-height: 1em;
}
.contactForm .formBody {
  background: #fff;
  padding: 20px 12px;
  overflow: hidden;
  height: 80vh;
  /*TRANSITION*/
  transition: all 0.2s ease;
}
.contactForm .inputContainer {
  border: 1px solid #ccc;
  border-radius: 3px;
  position: relative;
  margin-bottom: 5px;
  overflow: hidden;
  background: transparent;
}
.contactForm .inputContainer .message {
  color: #FF5C5C;
  background: #FF5C5C;
  position: absolute;
  top: 0;
  bottom: 0;
  width: 0;
  margin: 0;
  line-height: 2.5em;
  text-align: center;
  overflow: hidden;
  /*TRANSITION*/
  transition: all 0.1s ease;
}
.contactForm .inputContainer label,
.contactForm .inputContainer input,
.contactForm .inputContainer textarea {
  box-sizing: border-box;
  padding: 10px;
  font-size: 14px;
  line-height: 1em;
  border: none;
  font: inherit;
}
.contactForm .inputContainer label {
  display: inline-block;
  font-size: 0.7em;
  background: #ccc;
  color: rgba(0, 0, 0, 0.3);
  line-height: 1.75em;
  border-right: 1px solid #ccc;
  /*POSITION*/
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
}
.contactForm .inputContainer textarea,
.contactForm .inputContainer input {
  width: 100%;
  max-width: 100%;
  resize: none;
}
.contactForm .inputContainer textarea {
  margin-bottom: -5px;
}
.contactForm .inputContainer input {
  padding-left: 50px;
}
.contactForm .submitBtn {
  background: #54428E;
  color: #fff;
  border: none;
  border-radius: 3px;
  font: inherit;
  padding: 10px 18px;
  margin-top: 10px;
  float: right;
  width: auto;
  /*TRANSITION*/
  transition: background 0.5s ease;
}
.contactForm .submitBtn:hover {
  background: #54428E;
}
.contactForm.success {
  overflow: hidden;
}
.contactForm.success .formHeader {
  background: #0A8754;
  border-color: #0A8754;
  font-size: 0.75em;
}
.contactForm.success .formBody {
  height: 0;
  padding-top: 0;
  padding-bottom: 0;
}
.contactForm.success .formBody form {
  /*TRANSITION*/
  transition: opacity 0.5s ease;
  opacity: 0;
}
.contactForm .inputContainer.success {
  border-color: #82E682;
}
.contactForm .inputContainer.success:after {
  font: 1.25em/2em FontAwesome;
  color: #82E682;
  position: absolute;
  top: 0;
  right: 10px;
  content: "";
}
.contactForm .inputContainer.success label {
  background: #82E682;
  border-color: #82E682;
}
.contactForm .inputContainer.success input,
.contactForm .inputContainer.success textarea {
  color: #0A8754;
}
.contactForm .inputContainer.error {
  border-color: #FF5C5C;
}
.contactForm .inputContainer.error .message {
  width: 100%;
}
.contactForm .inputContainer.error:after {
  font: 1.25em/2em FontAwesome;
  color: #FF5C5C;
  position: absolute;
  top: 0;
  right: 10px;
  content: "";
}
.contactForm .inputContainer.error label {
  background: #FF5C5C;
  border-color: #FF5C5C;
}
.contactForm .inputContainer.error input,
.contactForm .inputContainer.error textarea {
  color: #FF5C5C;
}

/* set user details to display none */
.light{
  display: none;
}

/* set customer view options */
.customer-list{
  display: none;
}

/* hide customer html  */
 /* #addCustomer{
  display: none;
} */

.showAddForm{
  display: block;
} 

.hideAddForm{
  display: none;
}

